--- a/Notebooks/KeystrokeDynamics - SVM.ipynb
+++ b/Notebooks/KeystrokeDynamics - SVM.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "_active": true,
     "_cell_guid": "1f621c2e-b61f-d304-0d38-82fb4869f797",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "_active": false,
     "_cell_guid": "62cbc1b1-e882-d079-e1a4-059ee1cbc2f1",
@@ -42,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "_active": false,
     "_cell_guid": "1bae06e5-122d-7c35-afa1-dbb13a65ae16",
-    "_uuid": "a31d9a21278de47db18c217af3ad32a1f5a931f3"
+    "_uuid": "a31d9a21278de47db18c217af3ad32a1f5a931f3",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -60,7 +61,8 @@
    "metadata": {
     "_active": false,
     "_cell_guid": "df5c8bb3-e509-f936-389d-47d1223a6c88",
-    "_uuid": "fb0e4b155212ae92640acf41ad80f9055d22a703"
+    "_uuid": "fb0e4b155212ae92640acf41ad80f9055d22a703",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -74,7 +76,8 @@
    "metadata": {
     "_active": false,
     "_cell_guid": "5574387b-585b-dc46-c439-6c6fbb064d8a",
-    "_uuid": "eab616aed848cf6095bf1e03d22d7f46d8285464"
+    "_uuid": "eab616aed848cf6095bf1e03d22d7f46d8285464",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -88,7 +91,8 @@
    "metadata": {
     "_active": false,
     "_cell_guid": "ed0c043a-4b57-fa1e-b773-4c94376c0977",
-    "_uuid": "98acbf512d9bfef4cf90eb3048f6659bee402c16"
+    "_uuid": "98acbf512d9bfef4cf90eb3048f6659bee402c16",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1863,7 +1867,8 @@
    "metadata": {
     "_active": false,
     "_cell_guid": "5c5b8627-20ad-4852-5c58-db0b4923eb99",
-    "_uuid": "e4f7a3738e7f70240ebc5f44dd8428312e570461"
+    "_uuid": "e4f7a3738e7f70240ebc5f44dd8428312e570461",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -2186,7 +2191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
