--- a/Notebooks/RNN - Keystroke Dynamics.ipynb
+++ b/Notebooks/RNN - Keystroke Dynamics.ipynb
@@ -63,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = MLPClassifier(hidden_layer_sizes=(300, ),max_iter=5000,activation='logistic')\n"
+    "net = MLPClassifier(hidden_layer_sizes=(200, ),max_iter=600)\n"
    ]
   },
   {
@@ -95,22 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MLPClassifier(activation='logistic', alpha=0.0001, batch_size='auto',\n",
-       "       beta_1=0.9, beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
-       "       hidden_layer_sizes=(300,), learning_rate='constant',\n",
-       "       learning_rate_init=0.001, max_iter=5000, momentum=0.9,\n",
+       "MLPClassifier(activation='relu', alpha=0.0001, batch_size='auto', beta_1=0.9,\n",
+       "       beta_2=0.999, early_stopping=False, epsilon=1e-08,\n",
+       "       hidden_layer_sizes=(200,), learning_rate='constant',\n",
+       "       learning_rate_init=0.001, max_iter=600, momentum=0.9,\n",
        "       nesterovs_momentum=True, power_t=0.5, random_state=None,\n",
-       "       shuffle=True, solver='sgd', tol=0.0001, validation_fraction=0.1,\n",
+       "       shuffle=True, solver='adam', tol=0.0001, validation_fraction=0.1,\n",
        "       verbose=False, warm_start=False)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.64117647058823535"
+       "0.92132352941176465"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
