--- a/Notebooks/KNN HIPER.ipynb
+++ b/Notebooks/KNN HIPER.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -98,14 +98,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best parameters are {'leaf_size': 90, 'metric': 'cityblock', 'n_neighbors': 23, 'weights': 'uniform'} with a score of 0.37\n"
+      "The best parameters are {'leaf_size': 74, 'metric': 'cityblock', 'n_neighbors': 24, 'weights': 'uniform'} with a score of 0.37\n"
      ]
     }
    ],
@@ -121,12 +121,12 @@
     "\n",
     "n_neighbors_range = np.random.randint(5,100, size=(1, 10))[0]\n",
     "weights_range = ['uniform','distance']\n",
-    "metric_range = ['cityblock', 'cosine', 'euclidean', 'l1', 'l2', 'manhattan']\n",
+    "metric_range = ['cityblock', 'euclidean', 'l1', 'l2', 'manhattan']\n",
     "leaf_size_range =np.random.randint(15,100, size=(1, 10))[0]\n",
     "\n",
     "param_grid = dict(n_neighbors=n_neighbors_range,weights=weights_range,metric =metric_range, leaf_size=leaf_size_range)\n",
     "cv = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=42)\n",
-    "grid = GridSearchCV(KNeighborsClassifier(algorithm='auto',metric='manhattan',n_jobs=1), param_grid=param_grid, cv=cv,n_jobs=1)\n",
+    "grid = GridSearchCV(KNeighborsClassifier(algorithm='auto',metric='manhattan',n_jobs=4), param_grid=param_grid, cv=cv,n_jobs=4)\n",
     "grid.fit(X, y)\n",
     "\n",
     "print(\"The best parameters are %s with a score of %0.2f\"\n",
@@ -167,6 +167,15 @@
     "plt.title('Validation accuracy')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -185,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
